--- a/menu.html
+++ b/menu.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="id">
 	<head>
 		<title>HTML Examples 1</title>
-		<link rel="stylesheet" type="text/css" href="mystyle.css">
+		<link rel="stylesheet" type="text/css" href="mystyle2.css">
 	</head>
 	<body>
 		<div class="header">
@@ -25,7 +25,7 @@
 					</ul>
 				</li>
 				<li>
-					<a href="" id="m2" onmousemover="menu(2)">Menu 2</a>
+					<a href="" id="m2" onmouseover="menu(2)">Menu 2</a>
 					<ul class="submenu" id="sm2">
 						<li>
 							<a href="">Menu 2 Submenu 1</a>
@@ -52,6 +52,29 @@
 						</li>
 					</ul>
 				</li>
+				<li>
+					<a href="" id="m4" onmouseover="menu(4)">Menu 4</a>
+					<ul class="submenu" id="sm4">
+						<li>
+							<a href="">Menu 4 Submenu 1</a>
+						</li>
+						<li>
+							<a href="">Menu 4 Submenu 2</a>
+						</li>
+						<li>
+							<a href="">Menu 4 Submenu 3</a>
+						</li>
+						<li>
+							<a href="">Menu 4 Submenu 4</a>
+						</li>
+						<li>
+							<a href="">Menu 4 Submenu 5</a>
+						</li>
+						<li>
+							<a href="">Menu 4 Submenu 6</a>
+						</li>
+					</ul>
+				</li>
 			</ul>	
 		</div>
 		<div class="main">
@@ -63,6 +86,6 @@
 		<div class="footer">
 			<h3>Ini adalah bagian Footer</h3>
 		</div>
-		<script src="myscript.js" type="text/javascript"></script>
+		<script src="myscript2.js" type="text/javascript"></script>
 	</body>
 </html>
