perbaikan latihan ke-2 versi 2

--- a/menu.html
+++ b/menu.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="id">
 	<head>
 		<title>HTML Examples 1</title>
-		<link rel="stylesheet" type="text/css" href="mystyle2.css">
+		<link rel="stylesheet" type="text/css" href="mystyle.css">
 	</head>
 	<body>
 		<div class="header">
@@ -86,6 +86,6 @@
 		<div class="footer">
 			<h3>Ini adalah bagian Footer</h3>
 		</div>
-		<script src="myscript2.js" type="text/javascript"></script>
+		<script src="myscript.js" type="text/javascript"></script>
 	</body>
 </html>
